# i3-workspace-brightness

./: .gitignore  Cargo.toml  README.md
src/: main.rs
